Base/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: awx-server
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`awx.cube.lab`)
      priority: 10
      services:
        - name: awx-service  # Replace with the actual service name created by AWX operator
          port: 8081         # Port that the AWX service listens on
  tls:
    secretName: awx-secrets-tls
